# model-loading-comparison

./: .gitignore  CMakeLists.txt  README.md  main.cpp
res/: tex_opt.mtl
res/cube/: cube.mtl
src/: assimp_loader.h  common.h  conditional.h  main.cpp  obj_loader.h
